--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>Portfolio - home</title>
+    <title>Portfolio - Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
@@ -15,11 +15,11 @@
   <nav class="navbar navbar-expand-sm bg-light navbar-light">
     <a class="navbar-brand" href="/index.html">Your Name / Your org name</a>
     <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="/index.html">  <i class="fa fa-newspaper-o" aria-hidden="true"> Main page</i></a></li>
-      <li class="nav-item"><a class="nav-link" href="/gallery.html"><i class="fa fa-picture-o" aria-hidden="true"> Gallery</i></a></li>
+      <li class="nav-item active"><a class="nav-link" href="/index.html">  <i> Main page</i></a></li>
+      <li class="nav-item"><a class="nav-link" href="/gallery.html"><i> Gallery</i></a></li>
     </ul>
     <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-      <li class="nav-item"><a class="nav-link" href="/contact.html"><i class="fa fa-user-circle" aria-hidden="true"></i> Contact</i></a></li>
+      <li class="nav-item"><a class="nav-link" href="/contact.html"><i> Contact</i></a></li>
     </ul>
   </nav>
     
