add script for navbar and json loading

--- a/html/test.html
+++ b/html/test.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <title>Portfolio - Home</title>
+  <title>Portfolio - Gallery</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--CDN-->
@@ -16,7 +17,10 @@
 
   <!--Local-->
   <!--stylesheet-->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/navbar.css">
+
+  <!--content related stylesheet-->
+
 
   <!--navbar-->
   <script defer src='../js/filehandler.js'></script>
@@ -24,25 +28,22 @@
 
   <!--tab color-->
   <!-- Chrome, Firefox OS and Opera -->
-  <meta name="theme-color" content="#343a40">
+  <meta name="theme-color" content="#424242">
   <!-- Windows Phone -->
-  <meta name="msapplication-navbutton-color" content="#343a40">
+  <meta name="msapplication-navbutton-color" content="#424242">
   <!-- iOS Safari -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="#343a40">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#424242">
 
-
-  <!--page specific-->
 </head>
 
-<body class="bg-dark">
+<body>
+
   <div id='navstring'></div>
 
   <div class="container">
-    <p class="text-white">Your presentation text here.</p>
-
     <div id="footer"></div>
-  </div>
 
+  </div>
 </body>
 
 </html>
