--- a/html/gallery.html
+++ b/html/gallery.html
@@ -1,7 +1,6 @@
 <html lang="en">
-
-<head>
-  <title>Portfolio - Home</title>
+  <head>
+    <title>Portfolio - Gallery</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--CDN-->
@@ -18,6 +17,9 @@
   <!--stylesheet-->
   <link rel="stylesheet" href="/css/style.css">
 
+  <!--content related stylesheet-->
+
+
   <!--navbar-->
   <script defer src='../js/filehandler.js'></script>
   <script defer src='../js/navbar.js'></script>
@@ -30,19 +32,20 @@
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#343a40">
 
+  </head>
+    
+  <body class="bg-dark">
+    <div id='navstring'></div>
 
-  <!--page specific-->
-</head>
+    <div class="container">
 
-<body class="bg-dark">
-  <div id='navstring'></div>
+      <div class="card-columns">
+        <div id="album"></div> 
+      </div>
 
-  <div class="container">
-    <p class="text-white">Your presentation text here.</p>
-
-    <div id="footer"></div>
-  </div>
-
+      <div id="footer"></div>
+    </div>
+    <script src="/album.js"></script>
+    
 </body>
-
 </html>
