--- a/html/show.html
+++ b/html/show.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-    <title>Portfolio - Contact</title>
+    <title>Portfolio - Gallery</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--CDN-->
@@ -32,7 +32,7 @@
 
 
     <!--page specific-->
-    <script defer src='../js/contact.js'></script>
+    <script defer src='../js/showAlbum.js'></script>
 
 </head>
 
@@ -40,12 +40,13 @@
     <div id='navstring'></div>
 
     <div class="container">
+        <h2 id="title"></h2>
+        <h3 id="date"></h3>
+        <p id="description"></p>
 
-        <div id="picture"></div>
-        <div id="name"></div>
-        <div id="phone"></div>
-        <div id="mail"></div>
-        <div id="instagram"></div>
+        <div class="card-columns">
+            <div id="album"></div>
+        </div>
 
         <div id="footer"></div>
     </div>
