--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
   <!--fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
   <!--Local-->
   <!--stylesheet-->
@@ -40,6 +40,8 @@
   <div class="container">
     <p class="text-white">Your presentation text here.</p>
 
+
+    <blockquote class="imgur-embed-pub" lang="en" data-id="A7Z4ykG"><a href="//imgur.com/A7Z4ykG">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     <div id="footer"></div>
   </div>
 
