--- a/html/test.html
+++ b/html/test.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,14 +12,11 @@
   <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
   <!--fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
   <!--Local-->
   <!--stylesheet-->
-  <link rel="stylesheet" href="../css/navbar.css">
-
-  <!--content related stylesheet-->
-
+  <link rel="stylesheet" href="/css/style.css">
 
   <!--navbar-->
   <script defer src='../js/filehandler.js'></script>
@@ -28,22 +24,54 @@
 
   <!--tab color-->
   <!-- Chrome, Firefox OS and Opera -->
-  <meta name="theme-color" content="#424242">
+  <meta name="theme-color" content="#343a40">
   <!-- Windows Phone -->
-  <meta name="msapplication-navbutton-color" content="#424242">
+  <meta name="msapplication-navbutton-color" content="#343a40">
   <!-- iOS Safari -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="#424242">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#343a40">
+
+
+  <!--page specific-->
+  <script defer src='../js/showAlbum.js'></script>
 
 </head>
 
-<body>
-
+<body class="bg-dark">
   <div id='navstring'></div>
 
   <div class="container">
-    <div id="footer"></div>
+    <h2 id="title"></h2>
+    <h3 id="date"></h3>
+    <p id="description"></p>
 
+    <div class="card-columns">
+      <div class="card img-fluid" data-toggle="modal" data-target="#myModal">
+        <img class="card-img-top" src="https://i.imgur.com/ma4x7Aw.jpg" alt="Card image" style="width:100%">
+      </div>
+
+      <div class="modal" id="myModal">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+
+            <!-- Modal body -->
+            <div class="modal-body">
+              <img class="card-img-top" src="https://i.imgur.com/ma4x7Aw.jpg" alt="Card image" style="width:100%">
+            </div>
+
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+
+    <div id="footer"></div>
   </div>
+
 </body>
 
 </html>
