--- a/html/album.html
+++ b/html/album.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-    <title>Portfolio - Gallery</title>
+    <title>Portfolio - Album</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--CDN-->
@@ -17,10 +17,14 @@
     <!--Local-->
     <!--stylesheet-->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/spinner.css">
+    <link rel="stylesheet" href="/css/lightbox.css">
 
-    <!--navbar-->
+    <!--Scripts-->
     <script defer src='../js/filehandler.js'></script>
     <script defer src='../js/navbar.js'></script>
+    <script defer src='../js/pagetitle.js'></script>
+    <script defer src="../js/lightbox.js"></script>
 
     <!--tab color-->
     <!-- Chrome, Firefox OS and Opera -->
