--- a/html/contact.html
+++ b/html/contact.html
@@ -17,10 +17,14 @@
     <!--Local-->
     <!--stylesheet-->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/spinner.css">
+    <link rel="stylesheet" href="/css/lightbox.css">
 
-    <!--navbar-->
+    <!--Scripts-->
     <script defer src='../js/filehandler.js'></script>
     <script defer src='../js/navbar.js'></script>
+    <script defer src='../js/pagetitle.js'></script>
+    <script defer src="../js/lightbox.js"></script>
 
     <!--tab color-->
     <!-- Chrome, Firefox OS and Opera -->
