--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="/css/style.css">
 
     <!--Scripts-->
-    <script defer src='../js/filehandler.js'></script>
-    <script defer src='../js/navbar.js'></script>
-    <script defer src='../js/pagetitle.js'></script>
+    <script defer src='/js/filehandler.js'></script>
+    <script defer src='/js/navbar.js'></script>
+    <script defer src='/js/pagetitle.js'></script>
 
     <!--tab color-->
     <!-- Chrome, Firefox OS and Opera -->
