--- a/html/gallery.html
+++ b/html/gallery.html
@@ -16,9 +16,9 @@
 
     <!--Local-->
     <!--stylesheet-->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/spinner.css">
-    <link rel="stylesheet" href="/css/lightbox.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/spinner.css">
+    <link rel="stylesheet" href="../css/lightbox.css">
 
     <!--Scripts-->
     <script defer src='../js/filehandler.js'></script>
