--- a/html/album.html
+++ b/html/album.html
@@ -48,9 +48,7 @@
         <h3 id="date"></h3>
         <p id="description"></p>
 
-        <div class="card-columns">
-            <div id="album"></div>
-        </div>
+        <div id="album" class="deck"></div>
 
         <div id="footer"></div>
     </div>
