--- a/html/gallery.html
+++ b/html/gallery.html
@@ -45,9 +45,7 @@
 
     <div class="container">
 
-        <div class="card-columns">
-            <div id="gallery"></div>
-        </div>
+        <div id="gallery" class="deck"></div>
 
         <div id="footer"></div>
     </div>
