--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@
     <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
     <!--fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
     <!--Local-->
     <!--stylesheet-->
-    <link rel="stylesheet" href="/css/style.css">
-
-    <!--Scripts-->
-    <script defer src='/js/filehandler.js'></script>
-    <script defer src='/js/navbar.js'></script>
-    <script defer src='/js/pagetitle.js'></script>
+    <link rel="stylesheet" href="../css/index.css">
 
     <!--tab color-->
     <!-- Chrome, Firefox OS and Opera -->
@@ -30,20 +24,19 @@
     <meta name="msapplication-navbutton-color" content="#343a40">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#343a40">
-
-
-    <!--page specific-->
 </head>
 
 <body class="bg-dark">
-    <div id='navstring'></div>
-
-    <div class="container">
-        <p class="text-white">Your presentation text here.</p>
-
-        <div id="footer"></div>
-    </div>
-
+    <header class="container">
+        <section class="content">
+            <h1><b>Welcome !</b></h1>
+            <p class="sub-title">I'm Mael Abgrall, student in computer science and amateur photographer</p>
+            <p>
+                <a href="/cv/html/home.html" class="hvr-outline-out"><i class="fas fa-address-card"></i> CV</a>
+                <a href="/portfolio.html" class="hvr-outline-out"><i class="fas fa-camera-retro"></i> Portfolio</a>
+            </p>
+        </section>
+    </header>
 </body>
 
 </html>
