--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 <body class="bg-dark">
     <header class="container">
         <section class="content">
-            <h1><b>Welcome !</b></h1>
-            <p class="sub-title">I'm Mael Abgrall, student in computer science and amateur photographer</p>
+            <h1><b>Mael Abgrall</h1>
+            <p class="sub-title">Amateur photographer since 2010</p>
             <p>
-                <a href="/cv/html/home.html" class="hvr-outline-out"><i class="fas fa-address-card"></i> CV</a>
-                <a href="/portfolio.html" class="hvr-outline-out"><i class="fas fa-camera-retro"></i> Portfolio</a>
+                <a href="../html/gallery.html" class="hvr-outline-out"><i class="fas fa-camera-retro"></i> Gallery</a>
+                <a href="https://www.instagram.com/meuuul/" class="hvr-outline-out"><i class="fab fa-instagram"></i> Instagram</a>
             </p>
         </section>
     </header>
