--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1><b>Mael Abgrall</h1>
             <p class="sub-title">Amateur photographer since 2010</p>
             <p>
-                <a href="../html/gallery.html" class="hvr-outline-out"><i class="fas fa-camera-retro"></i> Gallery</a>
+                <a href="https://maelabgrall.github.io/Portfolio/html/gallery.html" class="hvr-outline-out"><i class="fas fa-camera-retro"></i> Gallery</a>
                 <a href="https://www.instagram.com/meuuul/" class="hvr-outline-out"><i class="fab fa-instagram"></i> Instagram</a>
             </p>
         </section>
