--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!--Local-->
     <!--stylesheet-->
-    <link rel="stylesheet" href="../../css/index.css">
+    <link rel="stylesheet" href="https://maelabgrall.github.io/Portfolio/css/index.css">
 
     <!--tab color-->
     <!-- Chrome, Firefox OS and Opera -->
