--- a/html/gallery.html
+++ b/html/gallery.html
@@ -44,7 +44,7 @@
     <div id='navstring'></div>
 
     <div class="container">
-
+        <p>This website is still under development. Albums can take a while to load entirely at the moment (some images will show before the full album is loaded). If you spot bugs please contact me.</p>
         <div id="gallery" class="deck"></div>
 
         <div id="footer"></div>
