--- a/html/gallery.html
+++ b/html/gallery.html
@@ -44,6 +44,7 @@
     <div id='navstring'></div>
 
     <div class="container">
+        <h2>Click on the images to show the album</h2>
         <p>This website is still under development. Albums can take a while to load entirely at the moment (some images will show before the full album is loaded). If you spot bugs please contact me.</p>
         <div id="gallery" class="deck"></div>
 
