--- a/html/contact.html
+++ b/html/contact.html
@@ -34,6 +34,8 @@
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#343a40">
 
+    <!--Favicon-->
+    <link rel="shortcut icon" href="../icons/favicon.ico" />
 
     <!--page specific-->
     <script defer src='../js/contact.js'></script>
