latest update + update albums

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -47,7 +47,9 @@
 
     <div class="container">
         <h2>Click on the images to show the album</h2>
-        <p>This website is still under development. Albums can take a while to load entirely at the moment (some images will show before the full album is loaded). If you spot bugs please contact me.</p>
+        <p>This website is still under development. Albums can take a while to load entirely at the moment (some images
+            will show before the full album is loaded). If you spot bugs please contact me, or use Github's bug tracker
+            <a href="https://github.com/MaelAbgrall/Portfolio/issues">here</a></p>
         <div id="gallery" class="deck"></div>
 
         <div id="footer"></div>
