--- a/html/contact.html
+++ b/html/contact.html
@@ -51,6 +51,20 @@
         <div id="name"></div>
         <div id="phone"></div>
         <div id="mail"></div>
+        <h3>Copyright and usage</h3>
+        <p>You are free to use my pictures for personal use (Facebook, linkedin, etc) but please cite me if you
+            can.<br>For
+            business uses, please contact me.</p>
+
+        <h3>Prints</h3>
+        <p>You can print my best work <a href="https://www.redbubble.com/people/melabgrall/explore?asc=u&page=1&sortOrder=recent">on redbubble</a> (mostly phone cases and art prints).<br>RedBubble give me a small
+            percentage back everytime you print my work with them, many thanks in advance if you use their service :)
+        </p>
+        <p>If you want a specific picture on available on Redbubble, contact me!</p>
+
+        <h3>Contact</h3>
+        <p>Interested in a collaboration or a shoot ? <br> Want a picture in full format (8K) for your wallpaper?
+            <br><br> Send me a message through my instagram :)</p>
         <div id="instagram"></div>
 
         <div id="footer"></div>
